--- a/samples/msal-node-samples/nextjs-rsc-ts/package.json
+++ b/samples/msal-node-samples/nextjs-rsc-ts/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "redis": "^4.6.6",
+    "server-only": "^0.0.1",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
