--- a/lib/msal-common/tsconfig.json
+++ b/lib/msal-common/tsconfig.json
@@ -17,7 +17,7 @@
             "strictPropertyInitialization": false,
             "noImplicitThis": true,
             "noUnusedLocals": true,
-            "noUnusedParameters": false,
+            "noUnusedParameters": true,
             "noImplicitAny": false,
             "noFallthroughCasesInSwitch": true
         }
