use delete task

--- a/.pipelines/custom-templates/publish-template.yml
+++ b/.pipelines/custom-templates/publish-template.yml
@@ -108,8 +108,10 @@ jobs:
           customCommand: 'pack'
 
       # Remove .npmrc file
-      - script: rm ${{ parameters.path }}/${{ parameters.libName }}/.npmrc
+      - task: DeleteFiles@1
         displayName: Remove .npmrc file
+        inputs:
+          Contents: ${{ parameters.path }}/${{ parameters.libName }}/.npmrc
 
       # Install Release Scripts dependencies
       - task: Npm@1
