add prettierPath to vscode settings
prettier vscode extension started failing without it

--- a/samples/msal-node-samples/nextjs-rsc-ts/.vscode/settings.json
+++ b/samples/msal-node-samples/nextjs-rsc-ts/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "prettier.prettierPath": "node_modules/prettier",
   "typescript.tsdk": "node_modules/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true
 }
