--- a/.github/workflows/build-test-pr.yml
+++ b/.github/workflows/build-test-pr.yml
@@ -100,9 +100,14 @@ jobs:
   ci-msal-node-extensions:
     name: msal-node-extensions
     needs: pre-check
+    strategy:
+      fail-fast: false # continue running jobs even if one combination fails
+      matrix:
+        os: [windows-latest, ubuntu-latest, macos-latest]
+
     uses: ./.github/workflows/ci-template.yml
     with:
       path: 'extensions'
       lib-name: 'msal-node-extensions'
-      os: 'windows-latest'
+      os: ${{ matrix.os }}
       should-run: ${{ contains(fromJSON(needs.pre-check.outputs.packages), 'msal-node-extensions') }}
