--- a/.pipelines/OneBranch.Release.yml
+++ b/.pipelines/OneBranch.Release.yml
@@ -50,6 +50,7 @@ variables:
   OUTPUTROOT: $(REPOROOT)\out
   NUGET_XMLDOC_MODE: none
 
+  WindowsContainerImage: 'onebranch.azurecr.io/windows/ltsc2019/vse2022:latest' # for Windows jobs https://aka.ms/obpipelines/containers
   LinuxContainerImage: 'onebranch.azurecr.io/linux/ubuntu-2004:latest' # Docker image which is used to build the project https://aka.ms/obpipelines/containers
 
 resources:
@@ -161,6 +162,7 @@ extends:
             dependsOn: 'publish_msal_common'
             publishOverride: ${{ parameters.overrideMsalNodeExtensions }}
             testMode: ${{ parameters.testMode }}
+            poolType: 'windows'
 
  
 
