--- a/extensions/msal-node-extensions/package.json
+++ b/extensions/msal-node-extensions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/msal-node-extensions",
-  "version": "1.0.0-alpha.34",
+  "version": "1.0.0-beta.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/AzureAD/microsoft-authentication-library-for-js.git"
@@ -8,7 +8,6 @@
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
-  "gypfile": true,
   "keywords": [
     "js",
     "ts",
@@ -19,21 +18,22 @@
   ],
   "files": [
     "dist",
-    "src",
-    "binding.gyp"
+    "bin"
   ],
   "engines": {
-    "node": ">=10"
+    "node": "18 || 20"
   },
   "scripts": {
-    "build": "node-gyp rebuild && rollup -c --strictDeprecations --bundleConfigAsCjs",
+    "compile": "node-gyp rebuild",
+    "clean": "shx rm -rf dist bin",
+    "build": "npm run clean && rollup -c --strictDeprecations --bundleConfigAsCjs && node ./scripts/buildBinaries.js",
     "build:common": "cd ../../lib/msal-common && npm run build",
     "build:all": "npm run build:common && npm run build",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "lint": "cd ../../ && npm run lint:node:extensions",
     "lint:fix": "npm run lint -- -- --fix",
-    "prepack": "npm run build:all"
+    "prepack": "npm run build:all && node ./scripts/checkBinaries.js"
   },
   "author": {
     "name": "Microsoft",
@@ -51,8 +51,7 @@
   "dependencies": {
     "@azure/msal-common": "14.0.0-alpha.1",
     "@azure/msal-node-runtime": "^0.13.6-alpha.0",
-    "keytar": "^7.8.0",
-    "node-addon-api": "^6.0.0"
+    "keytar": "^7.8.0"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.0.2",
@@ -60,7 +59,9 @@
     "@types/jest": "^29.5.1",
     "@types/node": "^18.8.3",
     "jest": "^29.5.0",
+    "node-addon-api": "^6.1.0",
     "rollup": "^3.20.2",
+    "shx": "^0.3.4",
     "ts-jest": "^29.1.0",
     "tslib": "^2.0.0",
     "typescript": "^4.9.5"
