--- a/extensions/msal-node-extensions/package.json
+++ b/extensions/msal-node-extensions/package.json
@@ -49,7 +49,7 @@
     ]
   },
   "dependencies": {
-    "@azure/msal-common": "14.0.0-alpha.1",
+    "@azure/msal-common": "14.0.0-beta.0",
     "@azure/msal-node-runtime": "^0.13.6-alpha.0",
     "keytar": "^7.8.0"
   },
