--- a/lib/msal-angular/package.json
+++ b/lib/msal-angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/msal-angular",
-  "version": "3.0.0-alpha.2",
+  "version": "3.0.0-beta.0",
   "author": {
     "name": "Microsoft",
     "email": "nugetaad@microsoft.com",
@@ -52,7 +52,7 @@
     "@angular/platform-browser": "^15.1.4",
     "@angular/platform-browser-dynamic": "^15.1.4",
     "@angular/router": "^15.1.4",
-    "@azure/msal-browser": "^3.0.0-alpha.2",
+    "@azure/msal-browser": "^3.0.0-beta.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -72,7 +72,7 @@
     "zone.js": "~0.11.8"
   },
   "peerDependencies": {
-    "@azure/msal-browser": "^3.0.0-alpha.2",
+    "@azure/msal-browser": "^3.0.0-beta.0",
     "rxjs": "^7.0.0"
   }
 }
