--- a/lib/msal-react/package.json
+++ b/lib/msal-react/package.json
@@ -21,7 +21,11 @@
     "node": ">=10"
   },
   "beachball": {
-    "disallowedChangeTypes": []
+    "disallowedChangeTypes": [
+      "patch",
+      "minor",
+      "major"
+    ]
   },
   "scripts": {
     "build": "rollup -c --strictDeprecations --bundleConfigAsCjs",
