--- a/lib/msal-angular/package.json
+++ b/lib/msal-angular/package.json
@@ -23,7 +23,7 @@
     "build:common": "cd ../msal-common && npm run build",
     "build:pack": "npm run build && cd dist && npm pack",
     "deploy": "npm run build:all:prod && npm publish ./dist",
-    "deploy:alpha": "npm run build:all:prod && npm publish ./dist --tag alpha",
+    "deploy:beta": "npm run build:all:prod && npm publish ./dist --tag beta",
     "test": "ng test",
     "test:coverage": "npm test",
     "lint": "cd ../../ && npm run lint:angular",
