--- a/lib/msal-browser/package.json
+++ b/lib/msal-browser/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/AzureAD/microsoft-authentication-library-for-js.git"
   },
-  "version": "3.0.0-alpha.2",
+  "version": "3.0.0-beta.0",
   "description": "Microsoft Authentication Library for js",
   "keywords": [
     "implicit",
@@ -29,7 +29,11 @@
     "node": ">=0.8.0"
   },
   "beachball": {
-    "disallowedChangeTypes": []
+    "disallowedChangeTypes": [
+      "patch",
+      "minor",
+      "major"
+    ]
   },
   "directories": {
     "test": "test"
@@ -93,6 +97,6 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@azure/msal-common": "14.0.0-alpha.2"
+    "@azure/msal-common": "14.0.0-beta.0"
   }
 }
