--- a/lib/msal-common/package.json
+++ b/lib/msal-common/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/AzureAD/microsoft-authentication-library-for-js.git"
   },
-  "version": "14.0.0-alpha.2",
+  "version": "14.0.0-beta.0",
   "description": "Microsoft Authentication Library for js",
   "keywords": [
     "implicit",
@@ -50,6 +50,13 @@
     "metadata:check": "npx ts-node scripts/metadata.ts",
     "format:check": "npx prettier --ignore-path .gitignore --check src test",
     "format:fix": "npx prettier --ignore-path .gitignore --write src test"
+  },
+  "beachball": {
+    "disallowedChangeTypes": [
+      "patch",
+      "minor",
+      "major"
+    ]
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
