--- a/lib/msal-react/package.json
+++ b/lib/msal-react/package.json
@@ -30,10 +30,7 @@
     "test:coverage": "jest --coverage",
     "lint": "cd ../../ && npm run lint:react",
     "lint:fix": "npm run lint -- -- --fix",
-    "build:all": "npm run build:common && npm run build:browser && npm run build",
-    "build:browser": "cd ../msal-browser && npm run build",
-    "build:common": "cd ../msal-common && npm run build",
-    "link:localDeps": "npx lerna bootstrap --scope @azure/msal-common --scope @azure/msal-browser --scope @azure/msal-react",
+    "build:all": "cd ../.. && npm run build --workspace=@azure/msal-common --workspace=@azure/msal-browser --workspace=@azure/msal-react",
     "prepack": "npm run build:all",
     "format:check": "npx prettier --ignore-path .gitignore --check src test",
     "format:fix": "npx prettier --ignore-path .gitignore --write src test"
