--- a/lib/msal-node/package.json
+++ b/lib/msal-node/package.json
@@ -33,9 +33,7 @@
     "test:coverage": "jest --coverage",
     "lint": "cd ../../ && npm run lint:node",
     "lint:fix": "npm run lint -- -- --fix",
-    "build:all": "npm run build:common && npm run build",
-    "build:common": "cd ../msal-common && npm run build",
-    "link:localDeps": "npx lerna bootstrap --scope @azure/msal-common --scope @azure/msal-node",
+    "build:all": "cd ../.. && npm run build --workspace=@azure/msal-common --workspace=@azure/msal-node",
     "prepack": "npm run build:all",
     "format:check": "npx prettier --ignore-path .gitignore --check src test",
     "format:fix": "npx prettier --ignore-path .gitignore --write src test"
