--- a/.github/workflows/msal-angular-e2e.yml
+++ b/.github/workflows/msal-angular-e2e.yml
@@ -47,7 +47,19 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-          node-version: 16
+          node-version: 18
+
+    - name: Get npm cache directory
+      id: npm-cache-dir
+      shell: bash
+      run: echo "dir=$(npm config get cache)" >> ${GITHUB_OUTPUT}
+
+    - uses: actions/cache@v3
+      with:
+        path: ${{ steps.npm-cache-dir.outputs.dir }}
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
 
     - name: Clean Install
       run: npm ci
@@ -55,16 +67,6 @@ jobs:
     - name: Build packages
       working-directory: lib/msal-angular
       run: npm run build:all
-
-    - name: Install Test Tools
-      working-directory: samples
-      run: npm ci
-
-    - name: Install ${{ matrix.sample }}
-      working-directory: samples/msal-angular-v3-samples/${{ matrix.sample }}
-      run: |
-        npm run install:local
-        npm install
 
     - name: Build ${{ matrix.sample }}
       working-directory: samples/msal-angular-v3-samples/${{ matrix.sample }}
