--- a/.github/workflows/beachball-check.yml
+++ b/.github/workflows/beachball-check.yml
@@ -42,6 +42,8 @@ jobs:
     - name: Use Node.js
       if: ${{ steps.filter.outputs.lib == 'true' }}
       uses: actions/setup-node@v3
+      with:
+        node-version: 18
 
     - name: Install beachball
       if: ${{ steps.filter.outputs.lib == 'true' }}
