--- a/.github/workflows/ci-template.yml
+++ b/.github/workflows/ci-template.yml
@@ -33,20 +33,21 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 20
+        node-version: 18
 
-    - name: Restore node_modules
-      uses: actions/cache@v3
-      id: cache
+    - name: Get npm cache directory
+      id: npm-cache-dir
+      shell: bash
+      run: echo "dir=$(npm config get cache)" >> ${GITHUB_OUTPUT}
+
+    - uses: actions/cache@v3
       with:
-        path: |
-          node_modules
-          lib/*/node_modules
-          extensions/*/node_modules
-        key: ${{ runner.os }}-${{ hashFiles('package-lock.json', 'lib/*/package-lock.json', 'extensions/*/package-lock.json') }}
+        path: ${{ steps.npm-cache-dir.outputs.dir }}
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
 
     - name: Clean Install
-      if: steps.cache.outputs.cache-hit != 'true'
       run: npm ci
 
     - name: Upload npm logs
