--- a/.github/workflows/metadata-check.yml
+++ b/.github/workflows/metadata-check.yml
@@ -25,18 +25,17 @@ jobs:
 
     - name: Use Node.js
       uses: actions/setup-node@v3
-
-    - name: Restore node_modules for libs
-      uses: actions/cache@v3
-      id: lib-cache
       with:
-        path: |
-          node_modules
-          lib/*/node_modules
-        key: ${{ runner.os }}-${{ hashFiles('package-lock.json', 'lib/*/package-lock.json') }}
+        node-version: 18
+
+    - uses: actions/cache@v3
+      with:
+        path: ${{ steps.npm-cache-dir.outputs.dir }}
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
 
     - name: Clean Install
-      if: steps.lib-cache.outputs.cache-hit != 'true'
       run: npm ci
 
     - name: Check metadata
