--- a/.github/workflows/msal-browser-e2e.yml
+++ b/.github/workflows/msal-browser-e2e.yml
@@ -48,46 +48,22 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 16
+        node-version: 18
 
-    - name: Restore node_modules for libs
-      uses: actions/cache@v3
-      id: lib-cache
+    - name: Get npm cache directory
+      id: npm-cache-dir
+      shell: bash
+      run: echo "dir=$(npm config get cache)" >> ${GITHUB_OUTPUT}
+
+    - uses: actions/cache@v3
       with:
-        path: |
-          node_modules
-          lib/*/node_modules
-        key: ${{ runner.os }}-${{ hashFiles('package-lock.json', 'lib/*/package-lock.json') }}
+        path: ${{ steps.npm-cache-dir.outputs.dir }}
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
 
     - name: Clean Install
-      if: steps.lib-cache.outputs.cache-hit != 'true'
       run: npm ci
-
-    - name: Restore node_modules for test tools
-      uses: actions/cache@v3
-      id: test-tools-cache
-      with:
-        path: |
-          samples/node_modules
-          samples/.cache/puppeteer
-        key: ${{ runner.os }}-browser-test-tools-${{ hashFiles('samples/package-lock.json') }}
-
-    - name: Install Test Tools
-      if: steps.test-tools-cache.outputs.cache-hit != 'true'
-      working-directory: samples
-      run: npm ci
-
-    - name: Restore node_modules for sample
-      uses: actions/cache@v3
-      id: sample-cache
-      with:
-        path: samples/msal-browser-samples/VanillaJSTestApp2.0/node_modules
-        key: ${{ runner.os }}-browser-sample-${{ hashFiles('samples/msal-browser-samples/VanillaJSTestApp2.0/package.json', 'samples/package-lock.json') }}
-
-    - name: Install Sample
-      if: steps.sample-cache.outputs.cache-hit != 'true'
-      working-directory: samples/msal-browser-samples/VanillaJSTestApp2.0
-      run: npm install
 
     - name: Build packages
       working-directory: samples/msal-browser-samples/VanillaJSTestApp2.0
