--- a/.github/workflows/msal-node-e2e.yml
+++ b/.github/workflows/msal-node-e2e.yml
@@ -51,59 +51,24 @@ jobs:
       with:
         node-version: ${{ matrix.node }}
 
-    - name: Restore node_modules for libs
-      uses: actions/cache@v3
-      id: lib-cache
+    - name: Get npm cache directory
+      id: npm-cache-dir
+      shell: bash
+      run: echo "dir=$(npm config get cache)" >> ${GITHUB_OUTPUT}
+
+    - uses: actions/cache@v3
       with:
-        path: |
-          node_modules
-          lib/msal-common/node_modules
-          lib/msal-node/node_modules
-        key: ${{ runner.os }}-node-e2e-${{matrix.node}}-${{ hashFiles('package-lock.json', 'lib/msal-common/package-lock.json', 'lib/msal-node/package-lock.json') }}
+        path: ${{ steps.npm-cache-dir.outputs.dir }}
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
 
     - name: Clean Install
-      if: steps.lib-cache.outputs.cache-hit != 'true'
-      run: npm ci --ignore-scripts
-
-    - name: Link local packages
-      run: npx lerna --scope @azure/msal-node --scope @azure/msal-common bootstrap
+      run: npm ci --ignore-engines
 
     - name: Build Package
       working-directory: samples/msal-node-samples
       run: npm run build:package
-
-    - name: Restore node_modules for test tools
-      if: matrix.node == '10' || matrix.node == '12'
-      uses: actions/cache@v3
-      id: test-tools-cache
-      with:
-        path: |
-          samples/node_modules
-          samples/.cache/puppeteer
-        key: ${{ runner.os }}-node-test-tools-${{ matrix.node }}-${{ hashFiles('samples/package-lock.json') }}
-
-    - name: Install Test Tools
-      if: steps.test-tools-cache.outputs.cache-hit != 'true'
-      working-directory: samples
-      run: npm ci
-
-    - name: Restore node_modules for sample
-      uses: actions/cache@v3
-      id: sample-cache
-      with:
-        path: samples/msal-node-samples/${{ matrix.sample }}/node_modules
-        key: ${{ runner.os }}-node-e2e-${{ matrix.sample }}-${{ matrix.node }}-${{ hashFiles(format('samples/msal-node-samples/{0}/package.json', matrix.sample), 'samples/package-lock.json') }}
-
-    - name: Install msal-node-samples packages
-      working-directory: samples/msal-node-samples
-      run: npm i
-
-    - name: Install Sample
-      if: steps.sample-cache.outputs.cache-hit != 'true'
-      working-directory: samples/msal-node-samples/${{ matrix.sample }}
-      run: |
-        npm run install:local
-        npm install
 
     - name: E2E Tests
       working-directory: samples/msal-node-samples/${{ matrix.sample }}
@@ -144,57 +109,24 @@ jobs:
 
     - name: Use Node.js
       uses: actions/setup-node@v3
-
-    - name: Restore node_modules for libs
-      uses: actions/cache@v3
-      id: lib-cache
       with:
-        path: |
-          node_modules
-          lib/msal-common/node_modules
-          lib/msal-node/node_modules
-        key: ${{ runner.os }}-node-electron-e2e-${{ hashFiles('package-lock.json', 'lib/msal-common/package-lock.json', 'lib/msal-node/package-lock.json') }}
+        node-version: 18
 
-    - name: Clean Install
-      if: steps.lib-cache.outputs.cache-hit != 'true'
-      run: npm ci
+    - name: Get npm cache directory
+      id: npm-cache-dir
+      shell: bash
+      run: echo "dir=$(npm config get cache)" >> ${GITHUB_OUTPUT}
+
+    - uses: actions/cache@v3
+      with:
+        path: ${{ steps.npm-cache-dir.outputs.dir }}
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
 
     - name: Build Package
       working-directory: samples/msal-node-samples
       run: npm run build:package
-
-    - name: Restore node_modules for test tools
-      uses: actions/cache@v3
-      id: test-tools-cache
-      with:
-        path: samples/node_modules
-        key: ${{ runner.os }}-node-test-tools-${{ hashFiles('samples/package-lock.json') }}
-
-    - name: Install Test Tools
-      if: steps.test-tools-cache.outputs.cache-hit != 'true'
-      working-directory: samples
-      run: npm ci
-      env:
-        PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
-        PLAYWRIGHT_BROWSERS_PATH: 0
-
-    - name: Restore node_modules for sample
-      uses: actions/cache@v3
-      id: sample-cache
-      with:
-        path: samples/msal-node-samples/${{ matrix.sample }}/node_modules
-        key: ${{ runner.os }}-electron-e2e-${{ matrix.sample }}-${{ hashFiles(format('samples/msal-node-samples/{0}/package.json', matrix.sample), 'samples/package-lock.json') }}
-
-    - name: Install msal-node-samples packages
-      working-directory: samples/msal-node-samples
-      run: npm i
-
-    - name: Install Sample
-      if: steps.sample-cache.outputs.cache-hit != 'true'
-      working-directory: samples/msal-node-samples/${{ matrix.sample }}
-      run: |
-        npm run install:local
-        npm install
 
     - name: Install Playwright
       working-directory: samples/msal-node-samples/${{ matrix.sample }}
