--- a/.github/workflows/typedoc.yml
+++ b/.github/workflows/typedoc.yml
@@ -23,6 +23,8 @@ jobs:
 
       - name: Use Node.js
         uses: actions/setup-node@v3
+        with:
+          node-version: 18
 
       - name: Install
         run: npm ci
