--- a/samples/msal-react-samples/typescript-sample/package.json
+++ b/samples/msal-react-samples/typescript-sample/package.json
@@ -3,8 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@azure/msal-browser": "^2.32.1",
-        "@azure/msal-react": "^1.5.1",
+        "@azure/msal-browser": "^3.0.0-beta.0",
+        "@azure/msal-react": "^2.0.0-beta.0",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
         "@mui/icons-material": "^5.10.16",
@@ -24,9 +24,7 @@
         "build": "react-scripts build",
         "build:package": "cd ../../../lib/msal-react && npm run build:all",
         "test": "jest",
-        "eject": "react-scripts eject",
-        "install:local": "npm install ../../../lib/msal-react ../../../lib/msal-react/node_modules/react ../../../lib/msal-react/node_modules/react-dom ../../../lib/msal-browser",
-        "install:published": "npm install @azure/msal-browser@latest @azure/msal-react@latest react@^18 react-dom@^18"
+        "eject": "react-scripts eject"
     },
     "eslintConfig": {
         "extends": [
