--- a/extensions/samples/msal-node-extensions/package.json
+++ b/extensions/samples/msal-node-extensions/package.json
@@ -12,8 +12,8 @@
   "author": "Microsoft",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "^1.3.0",
-    "@azure/msal-node-extensions": "file:../../msal-node-extensions",
+    "@azure/msal-node": "^2.0.0-beta.0",
+    "@azure/msal-node-extensions": "^1.0.0-beta.0",
     "express": "^4.17.1"
   }
 }
