--- a/samples/msal-angular-v3-samples/angular16-sample-app/package.json
+++ b/samples/msal-angular-v3-samples/angular16-sample-app/package.json
@@ -8,9 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "jest",
-    "install:local": "npm install ../../../lib/msal-angular/dist ../../../lib/msal-browser",
-    "install:published": "npm install @azure/msal-angular@latest @azure/msal-browser@latest"
+    "e2e": "jest"
   },
   "private": true,
   "dependencies": {
