--- a/samples/msal-browser-samples/TypescriptTestApp2.0/package.json
+++ b/samples/msal-browser-samples/TypescriptTestApp2.0/package.json
@@ -23,7 +23,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-browser": "file:../../../lib/msal-browser",
+    "@azure/msal-browser": "^3.0.0-beta.0",
     "@babel/runtime": "^7.10.4",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
