--- a/samples/msal-browser-samples/vue3-sample-app/package.json
+++ b/samples/msal-browser-samples/vue3-sample-app/package.json
@@ -5,12 +5,10 @@
     "start": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
-    "build:package": "cd ../../../lib/msal-browser && npm run build:all",
-    "install:local": "npm install ../../../lib/msal-browser",
-    "install:published": "npm install @azure/msal-browser@latest"
+    "build:package": "cd ../../../lib/msal-browser && npm run build:all"
   },
   "dependencies": {
-    "@azure/msal-browser": "^2.30.0",
+    "@azure/msal-browser": "^3.0.0-beta.0",
     "element-plus": "^2.2.19",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
