--- a/samples/msal-node-samples/ElectronSystemBrowserTestApp/package.json
+++ b/samples/msal-node-samples/ElectronSystemBrowserTestApp/package.json
@@ -9,7 +9,6 @@
         "start": "electron-forge start",
         "package": "electron-forge package",
         "build:package": "cd ../../../lib/msal-common && npm run build && cd ../msal-node && npm run build",
-        "install:local": "npm install ../../../lib/msal-common && npm install ../../../lib/msal-node",
         "make": "electron-forge make",
         "publish": "electron-forge publish",
         "lint": "eslint --ext .ts,.tsx .",
@@ -53,8 +52,7 @@
         "typescript": "~4.5.4"
     },
     "dependencies": {
-        "@azure/msal-common": "file:../../../lib/msal-common",
-        "@azure/msal-node": "file:../../../lib/msal-node",
+        "@azure/msal-node": "^2.0.0-beta.0",
         "axios": "^1.1.3",
         "bootstrap": "^5.2.3",
         "electron-squirrel-startup": "^1.0.0",
