--- a/samples/msal-node-samples/ExpressTestApp/package.json
+++ b/samples/msal-node-samples/ExpressTestApp/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "build": "tsc",
     "build:package": "cd ../../../lib/msal-common && npm run build && cd ../msal-node && npm run build",
-    "start:build": "npm run build:package && npm start",
-    "install:local": "npm install ../../../lib/msal-node"
+    "start:build": "npm run build:package && npm start"
   },
   "author": "",
   "license": "MIT",
@@ -23,7 +22,7 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
-    "@azure/msal-node": "^1.3.1",
+    "@azure/msal-node": "^2.0.0-beta.0",
     "axios": "^0.21.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
