--- a/samples/msal-node-samples/auth-code-cli-brokered-app/package.json
+++ b/samples/msal-node-samples/auth-code-cli-brokered-app/package.json
@@ -12,8 +12,8 @@
   "author": "Microsoft",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "file:../../../lib/msal-node",
-    "@azure/msal-node-extensions": "file:../../../extensions/msal-node-extensions",
+    "@azure/msal-node": "^2.0.0-beta.0",
+    "@azure/msal-node-extensions": "^1.0.0-beta.0",
     "open": "^8.4.0"
   }
 }
