--- a/samples/msal-node-samples/auth-code-key-vault/package.json
+++ b/samples/msal-node-samples/auth-code-key-vault/package.json
@@ -12,7 +12,7 @@
   "author": "Microsoft",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "file:../../../lib/msal-node",
+    "@azure/msal-node": "^2.0.0-beta.0",
     "@azure/identity": "^1.2.3",
     "@azure/keyvault-certificates": "^4.1.0",
     "@azure/keyvault-secrets": "^4.1.0",
