--- a/samples/msal-node-samples/auth-code-with-certs/package.json
+++ b/samples/msal-node-samples/auth-code-with-certs/package.json
@@ -12,7 +12,7 @@
   "author": "Microsoft",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "file:../../../lib/msal-node",
+    "@azure/msal-node": "^2.0.0-beta.0",
     "express": "^4.17.1",
     "local": "^0.3.3"
   }
