--- a/samples/msal-node-samples/auth-code/package.json
+++ b/samples/msal-node-samples/auth-code/package.json
@@ -9,13 +9,12 @@
     "test": "jest",
     "test:agc": "jest --testMatch [ '**/test/**/*agc*.spec.ts' ]",
     "build:package": "cd ../../../lib/msal-common && npm run build && cd ../msal-node && npm run build",
-    "start:build": "npm run build:package && npm start",
-    "install:local": "npm install ../../../lib/msal-node"
+    "start:build": "npm run build:package && npm start"
   },
   "author": "Microsoft",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "^1.0.1",
+    "@azure/msal-node": "^2.0.0-beta.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2"
   },
