--- a/samples/msal-node-samples/client-credentials-distributed-cache/package.json
+++ b/samples/msal-node-samples/client-credentials-distributed-cache/package.json
@@ -21,7 +21,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@azure/msal-node": "^1.15.0",
+    "@azure/msal-node": "^2.0.0-beta.0",
     "axios": "^1.3.4",
     "open": "^8.4.2",
     "redis": "^4.6.5",
