--- a/samples/msal-node-samples/client-credentials/package.json
+++ b/samples/msal-node-samples/client-credentials/package.json
@@ -9,13 +9,12 @@
     "test": "jest",
     "test:agc": "jest --testMatch [ '**/test/**/*agc*.spec.ts' ]",
     "build:package": "cd ../../../lib/msal-common && npm run build && cd ../msal-node && npm run build",
-    "start:build": "npm run build:package && npm start",
-    "install:local": "npm install ../../../lib/msal-node"
+    "start:build": "npm run build:package && npm start"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "file:../../../lib/msal-node"
+    "@azure/msal-node": "^2.0.0-beta.0"
   },
   "devDependencies": {
     "jest": "^29.5.0",
