--- a/samples/msal-node-samples/custom-INetworkModule-and-network-tracing/package.json
+++ b/samples/msal-node-samples/custom-INetworkModule-and-network-tracing/package.json
@@ -6,17 +6,13 @@
     "build": "npx tsc",
     "start:app": "npm run build && node dist/app.js",
     "start:express": "npm run build && node dist/express.js",
-    "build:package": "cd ../../../lib/msal-common && npm run build && cd ../msal-node && npm run build",
-    "install:common": "npm install ../../../lib/msal-common",
-    "install:node": "npm install ../../../lib/msal-node",
-    "install:all": "cd ../../../lib/msal-common && npm run build && cd ../msal-node && npm run build"
+    "build:package": "cd ../../../lib/msal-common && npm run build && cd ../msal-node && npm run build"
   },
   "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@azure/msal-common": "^10.0.0",
-    "@azure/msal-node": "^1.15.0",
+    "@azure/msal-node": "^2.0.0-beta.0",
     "express": "^4.18.2",
     "url": "^0.11.0"
   },
