--- a/samples/msal-node-samples/on-behalf-of-distributed-cache/package.json
+++ b/samples/msal-node-samples/on-behalf-of-distributed-cache/package.json
@@ -23,7 +23,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@azure/msal-node": "^1.15.0",
+    "@azure/msal-node": "^2.0.0-beta.0",
     "axios": "^1.3.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
