--- a/samples/msal-node-samples/on-behalf-of/web-app/package.json
+++ b/samples/msal-node-samples/on-behalf-of/web-app/package.json
@@ -7,13 +7,12 @@
   "scripts": {
     "start": "node index.js",
     "build:package": "cd ../../../../lib/msal-common && npm run build && cd ../msal-node && npm run build",
-    "start:build": "npm run build:package && npm start",
-    "install:local": "npm install ../../../../lib/msal-node"
+    "start:build": "npm run build:package && npm start"
   },
   "author": "Microsoft",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "file:../../../../lib/msal-node",
+    "@azure/msal-node": "^2.0.0-beta.0",
     "express": "^4.17.1"
   }
 }
