--- a/samples/msal-node-samples/package.json
+++ b/samples/msal-node-samples/package.json
@@ -6,7 +6,6 @@
         "removeScreeshots": "shx rm -rf screenshots",
         "test": "npm run removeScreeshots && jest",
         "test:agc": "npm run removeScreeshots && jest --testMatch [ '**/test/**/*agc*.spec.ts' ]",
-        "preinstall": "cd .. && npm install",
         "build:package": "cd ../../lib/msal-node && npm run build:all"
     },
     "devDependencies": {
@@ -15,7 +14,7 @@
         "yargs": "^16.2.0"
     },
     "dependencies": {
-        "@azure/msal-node": "file:../../lib/msal-node",
+        "@azure/msal-node": "^2.0.0-beta.0",
         "@types/express": "^4.17.11",
         "express": "^4.17.1"
     }
