--- a/samples/msal-node-samples/username-password-cca/package.json
+++ b/samples/msal-node-samples/username-password-cca/package.json
@@ -7,12 +7,11 @@
   "scripts": {
     "start": "node index.js",
     "build:package": "cd ../../lib/msal-common && npm run build && cd ../msal-node && npm run build",
-    "start:build": "npm run build:package && npm start",
-    "install:local": "npm install ../../../lib/msal-node"
+    "start:build": "npm run build:package && npm start"
   },
   "author": "Microsoft",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "file:../../../lib/msal-node"
+    "@azure/msal-node": "^2.0.0-beta.0"
   }
 }
