--- a/samples/msal-react-samples/b2c-sample/package.json
+++ b/samples/msal-react-samples/b2c-sample/package.json
@@ -3,8 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@azure/msal-browser": "^2.28.1",
-        "@azure/msal-react": "^1.4.5",
+        "@azure/msal-browser": "^3.0.0-beta.0",
+        "@azure/msal-react": "^2.0.0-beta.0",
         "@emotion/react": "^11.9.3",
         "@emotion/styled": "^11.9.3",
         "@mui/icons-material": "^5.8.4",
@@ -23,9 +23,7 @@
         "build": "react-scripts build",
         "eject": "react-scripts eject",
         "test": "jest",
-        "build:package": "cd ../../../lib/msal-react & npm run build:all",
-        "install:local": "npm install ../../../lib/msal-react ../../../lib/msal-react/node_modules/react ../../../lib/msal-react/node_modules/react-dom ../../../lib/msal-browser",
-        "install:published": "npm install @azure/msal-browser@latest @azure/msal-react@latest react@^17 react-dom@^17"
+        "build:package": "cd ../../../lib/msal-react & npm run build:all"
     },
     "eslintConfig": {
         "extends": [
