--- a/.github/workflows/ci-template.yml
+++ b/.github/workflows/ci-template.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 18
+        node-version: 20
 
     - name: Get npm cache directory
       id: npm-cache-dir
@@ -48,7 +48,7 @@ jobs:
           ${{ runner.os }}-node-
 
     - name: Clean Install
-      run: npm ci
+      run: npm ci --workspace=lib/** --workspace=extensions/**
 
     - name: Upload npm logs
       uses: actions/upload-artifact@v3
