--- a/.github/workflows/msal-angular-e2e.yml
+++ b/.github/workflows/msal-angular-e2e.yml
@@ -62,7 +62,7 @@ jobs:
           ${{ runner.os }}-node-
 
     - name: Clean Install
-      run: npm ci
+      run: npm ci --workspace=@azure/msal-common --workspace=@azure/msal-browser --workspace=@azure/msal-angular --workspace=samples --workspace=samples/msal-angular-v3-samples/**
 
     - name: Build packages
       working-directory: lib/msal-angular
