--- a/.github/workflows/ci-template.yml
+++ b/.github/workflows/ci-template.yml
@@ -47,8 +47,10 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-node-
 
-    - name: Clean Install
-      run: npm ci --workspace=lib/** --workspace=extensions/**
+    - name: Install Dependencies
+      run: |
+        npm ci --workspaces=false
+        npm ci --workspace=lib/** --workspace=extensions/**
 
     - name: Upload npm logs
       uses: actions/upload-artifact@v3
