--- a/lib/msal-common/package.json
+++ b/lib/msal-common/package.json
@@ -47,7 +47,7 @@
     "build": "npm run clean && npm run build:modules",
     "build:all": "npm run build",
     "prepack": "npm run build",
-    "metadata:check": "npx ts-node scripts/metadata.ts",
+    "metadata:check": "ts-node scripts/metadata.ts",
     "format:check": "npx prettier --ignore-path .gitignore --check src test",
     "format:fix": "npx prettier --ignore-path .gitignore --write src test"
   },
@@ -77,6 +77,7 @@
     "shx": "^0.3.2",
     "sinon": "^7.5.0",
     "ts-jest": "^27.1.5",
+    "ts-node": "^10.9.1",
     "tslib": "^1.10.0",
     "tslint": "^5.20.0",
     "typescript": "^4.9.5",
