--- a/.github/workflows/ci-template.yml
+++ b/.github/workflows/ci-template.yml
@@ -48,9 +48,7 @@ jobs:
           ${{ runner.os }}-node-
 
     - name: Install Dependencies
-      run: |
-        npm ci --workspaces=false
-        npm ci --workspace=lib/** --workspace=extensions/**
+      run: npm ci --ignore-engines
 
     - name: Upload npm logs
       uses: actions/upload-artifact@v3
