Force lerna to use v6 in bootstrap command

--- a/lib/msal-angular/package.json
+++ b/lib/msal-angular/package.json
@@ -30,7 +30,7 @@
     "lint:fix": "npm run lint -- -- --fix",
     "e2e": "ng e2e",
     "prepack": "npm run build:all",
-    "link:localDeps": "npx lerna bootstrap --scope @azure/msal-common --scope @azure/msal-browser --scope @azure/msal-angular",
+    "link:localDeps": "npx lerna@6 bootstrap --scope @azure/msal-common --scope @azure/msal-browser --scope @azure/msal-angular",
     "prepublishOnly": "echo Use npm run deploy && exit 1",
     "format:check": "npx prettier --ignore-path .gitignore --check src",
     "format:fix": "npx prettier --ignore-path .gitignore --write src"
