Add cat to see if npmrc is created

--- a/.pipelines/custom-templates/publish-template.yml
+++ b/.pipelines/custom-templates/publish-template.yml
@@ -84,7 +84,7 @@ jobs:
           - task: CmdLine@2
             displayName: Check NPM login
             inputs:
-                script: npm whoami
+                script: cat .npmrc | ls
                 workingDirectory: "${{ parameters.path }}/${{ parameters.libName }}"
 
           # Publish to npm
