Replace cat with type for windows job

--- a/.pipelines/custom-templates/publish-template.yml
+++ b/.pipelines/custom-templates/publish-template.yml
@@ -84,7 +84,7 @@ jobs:
           - task: CmdLine@2
             displayName: Check NPM login
             inputs:
-                script: cat .npmrc | ls
+                script: type .npmrc | dir
                 workingDirectory: "${{ parameters.path }}/${{ parameters.libName }}"
 
           # Publish to npm
