--- a/.github/workflows/npm-audit.yml
+++ b/.github/workflows/npm-audit.yml
@@ -36,43 +36,4 @@ jobs:
         node-version: 18
 
     - name: npm audit (root)
-      run: npm audit --production
-
-  audit-extensions:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Use Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
-
-    - name: npm audit (node-extensions)
-      working-directory: extensions/msal-node-extensions
-      run: npm audit --production
-
-  audit-lib:
-    runs-on: ubuntu-latest
-    strategy:
-        fail-fast: false
-        matrix:
-          library:
-            - msal-common
-            - msal-browser
-            - msal-node
-            - msal-angular
-            - msal-react
-  
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Use Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
-
-    - name: npm audit (lib)
-      working-directory: lib/${{ matrix.library }}
-      run: npm audit --production
+      run: npm audit --workspace=lib/** --workspace=extensions/** --include-workspace-root
