--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "url": "https://github.com/AzureAD/microsoft-authentication-library-for-js.git"
   },
   "scripts": {
-    "audit": "npm audit --production && npm audit --production --workspaces",
+    "audit": "npm audit --workspace=lib/** --workspace=extensions/** --include-workspace-root",
     "doc": "npm run doc:generate && npm run doc:deploy",
     "doc:generate": "rimraf ./ref/* && typedoc",
     "doc:deploy": "gh-pages -d ref -a -e ref",
