--- a/lib/msal-react/tsconfig.json
+++ b/lib/msal-react/tsconfig.json
@@ -25,7 +25,10 @@
     "moduleResolution": "node",
     "baseUrl": "./",
     "jsx": "react",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "types": [
+      "jest"
+    ]
   },
   "references": [
     {
