--- a/lib/msal-browser/package.json
+++ b/lib/msal-browser/package.json
@@ -80,8 +80,7 @@
     "dotenv": "^8.2.0",
     "fake-indexeddb": "^3.1.3",
     "jest": "^29.5.0",
-    "jsdom": "^20.0.0",
-    "jsdom-global": "^3.0.2",
+    "jest-environment-jsdom": "^29.5.0",
     "prettier": "2.8.7",
     "rimraf": "^3.0.0",
     "rollup": "^3.14.0",
