--- a/lib/msal-node/tsconfig.json
+++ b/lib/msal-node/tsconfig.json
@@ -1,12 +1,20 @@
 {
-  "include": ["src", "test"],
-  "exclude": ["node_modules"],
+  "include": [
+    "src",
+    "test"
+  ],
+  "exclude": [
+    "node_modules"
+  ],
   "compilerOptions": {
     "target": "es2020",
     "module": "esnext",
     "declaration": true,
     "declarationMap": true,
-    "lib": ["dom", "esnext"],
+    "lib": [
+      "dom",
+      "esnext"
+    ],
     "importHelpers": true,
     "sourceMap": true,
     "rootDir": "./",
@@ -27,7 +35,11 @@
     "jsx": "react",
     "esModuleInterop": true,
     "suppressImplicitAnyIndexErrors": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "types": [
+      "jest",
+      "node"
+    ]
   },
   "compileOnSave": false,
   "buildOnSave": false,
