--- a/lib/msal-browser/tsconfig.json
+++ b/lib/msal-browser/tsconfig.json
@@ -15,7 +15,8 @@
         "esModuleInterop": true,
         "resolveJsonModule": true,
         "types": [
-            "jest"
+            "jest",
+            "node"
         ]
     },
     "references": [
