--- a/lib/msal-react/tsconfig.json
+++ b/lib/msal-react/tsconfig.json
@@ -27,7 +27,8 @@
     "jsx": "react",
     "esModuleInterop": true,
     "types": [
-      "jest"
+      "jest",
+      "react"
     ]
   },
   "references": [
