--- a/lib/msal-browser/package.json
+++ b/lib/msal-browser/package.json
@@ -76,6 +76,7 @@
     "@rollup/plugin-terser": "^0.4.0",
     "@rollup/plugin-typescript": "^11.0.0",
     "@types/jest": "^29.5.0",
+    "@types/node": "^20.3.1",
     "@types/sinon": "^7.5.0",
     "dotenv": "^8.2.0",
     "fake-indexeddb": "^3.1.3",
