--- a/lib/msal-common/package.json
+++ b/lib/msal-common/package.json
@@ -68,6 +68,7 @@
     "@types/debug": "^4.1.5",
     "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.182",
+    "@types/node": "^20.3.1",
     "@types/sinon": "^7.5.0",
     "jest": "^29.5.0",
     "lodash": "^4.17.21",
