--- a/lib/msal-react/package.json
+++ b/lib/msal-react/package.json
@@ -49,9 +49,10 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.5.0",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.2",
+    "@types/react": "^18.2.13",
+    "@types/react-dom": "^18.2.6",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "prettier": "2.8.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
