--- a/samples/msal-node-samples/tsconfig.json
+++ b/samples/msal-node-samples/tsconfig.json
@@ -18,15 +18,17 @@
         "importHelpers": true,
         "noImplicitAny": true,
         "downlevelIteration": true,
+        "types": [
+            "node",
+            "jest"
+        ]
     },
-    "include": ["**/test/*.spec.ts"],
+    "include": [
+        "**/test/*.spec.ts"
+    ],
     "exclude": [
         "node_modules"
     ],
-    "types": [
-        "node",
-        "jest"
-    ],
     "compileOnSave": false,
     "buildOnSave": false,
-} 
+}
